[gd_scene load_steps=13 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://BG_Animation.gd" type="Script" id=2]
[ext_resource path="res://World.tres" type="Environment" id=3]
[ext_resource path="res://Campfire.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/tree.tres" type="Material" id=5]
[ext_resource path="res://OptionButton.gd" type="Script" id=6]
[ext_resource path="res://MasterAudio.gd" type="Script" id=7]
[ext_resource path="res://Fullscreen.gd" type="Script" id=8]
[ext_resource path="res://Music.gd" type="Script" id=9]
[ext_resource path="res://Borderless.gd" type="Script" id=10]
[ext_resource path="res://Sounds.gd" type="Script" id=11]

[sub_resource type="PlaneMesh" id=1]
material = ExtResource( 5 )
size = Vector2( 2000, 2000 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.739374
margin_bottom = -0.73938
script = ExtResource( 1 )

[node name="BG_Animation" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Menu_Camera" type="Camera" parent="BG_Animation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0033226, -0.00802994, -0.00143182 )

[node name="Animation_Player" type="AnimationPlayer" parent="BG_Animation"]

[node name="Skybox" type="WorldEnvironment" parent="BG_Animation"]
environment = ExtResource( 3 )

[node name="Campfire" parent="BG_Animation" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6202, -1.54237, -7.51135 )

[node name="AudioStreamPlayer3D" parent="BG_Animation/Campfire" index="3"]
autoplay = false
bus = "Master"

[node name="MeshInstance" type="MeshInstance" parent="BG_Animation"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.59598, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Start_Menu" type="Panel" parent="."]
anchor_bottom = 1.0
margin_left = 101.36
margin_top = 1.36037
margin_right = 501.36
margin_bottom = 1.36035

[node name="Title_Label" type="Label" parent="Start_Menu"]
margin_left = 15.6038
margin_top = 3.70764
margin_right = 198.604
margin_bottom = 76.7076
rect_scale = Vector2( 2, 2 )
text = "Main Menu 
Under Construction"
align = 1
valign = 1

[node name="Button_Start" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -110.0
margin_right = 90.0
margin_bottom = -50.0
text = "Start"

[node name="Button_Quit" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 130.0
margin_right = 90.0
margin_bottom = 190.0
text = "Quit"

[node name="Button_Settings" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = 50.0
margin_right = 90.0
margin_bottom = 110.0
text = "Settings"

[node name="Button_Score" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 30.0
text = "Scoreboard"

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 528.21
margin_top = 36.0
margin_right = 1022.21
margin_bottom = 415.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -34.0
margin_top = 34.0
margin_right = 34.0
margin_bottom = 379.0
text = "NICKNAME:"
align = 1

[node name="Nickname" type="LineEdit" parent="Panel/Label"]
margin_left = -58.0
margin_top = 25.0
margin_right = 135.0
margin_bottom = 43.0
align = 1
max_length = 30
placeholder_text = "Guest"
caret_blink = true

[node name="GridContainer" type="GridContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -55.5
margin_right = 132.5
margin_bottom = 55.5
custom_constants/vseparation = 20
custom_constants/hseparation = 50
columns = 2

[node name="OptionButton" type="OptionButton" parent="Panel/GridContainer"]
margin_right = 109.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Item 0"
align = 1
script = ExtResource( 6 )

[node name="MASTER" type="GridContainer" parent="Panel/GridContainer"]
editor/display_folded = true
margin_left = 159.0
margin_right = 277.0
margin_bottom = 20.0
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="Panel/GridContainer/MASTER"]
margin_top = 1.0
margin_right = 62.0
margin_bottom = 15.0
text = "MASTER:  "

[node name="Master" type="HSlider" parent="Panel/GridContainer/MASTER"]
margin_left = 66.0
margin_right = 118.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 25.0
step = 5.0
ticks_on_borders = true
script = ExtResource( 7 )

[node name="Fullscreen" type="CheckBox" parent="Panel/GridContainer"]
margin_top = 40.0
margin_right = 109.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "FULLSCREEN"
script = ExtResource( 8 )

[node name="MUSIC" type="GridContainer" parent="Panel/GridContainer"]
editor/display_folded = true
margin_left = 159.0
margin_top = 40.0
margin_right = 277.0
margin_bottom = 64.0
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="Panel/GridContainer/MUSIC"]
margin_top = 1.0
margin_right = 62.0
margin_bottom = 15.0
text = "MUSIC:    "

[node name="Music" type="HSlider" parent="Panel/GridContainer/MUSIC"]
margin_left = 66.0
margin_right = 118.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 25.0
step = 5.0
ticks_on_borders = true
script = ExtResource( 9 )

[node name="Borderless" type="CheckBox" parent="Panel/GridContainer"]
margin_top = 84.0
margin_right = 109.0
margin_bottom = 108.0
size_flags_horizontal = 3
text = "BORDERLESS"
script = ExtResource( 10 )

[node name="GridContainer" type="GridContainer" parent="Panel/GridContainer"]
editor/display_folded = true
margin_left = 159.0
margin_top = 84.0
margin_right = 277.0
margin_bottom = 108.0
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="Panel/GridContainer/GridContainer"]
margin_top = 1.0
margin_right = 64.0
margin_bottom = 15.0
text = "SOUND:   "

[node name="Sound" type="HSlider" parent="Panel/GridContainer/GridContainer"]
margin_left = 68.0
margin_right = 118.0
margin_bottom = 16.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
min_value = -80.0
max_value = 25.0
step = 5.0
ticks_on_borders = true
script = ExtResource( 11 )

[node name="SettingsPanel" type="PopupPanel" parent="."]
margin_left = 537.615
margin_top = 36.4237
margin_right = 1010.61
margin_bottom = 380.424
[connection signal="text_changed" from="Panel/Label/Nickname" to="." method="_on_Nickname_text_changed"]
[connection signal="item_selected" from="Panel/GridContainer/OptionButton" to="Panel/GridContainer/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="Panel/GridContainer/MASTER/Master" to="Panel/GridContainer/MASTER/Master" method="_on_MasterAudio_value_changed"]
[connection signal="toggled" from="Panel/GridContainer/Fullscreen" to="Panel/GridContainer/Fullscreen" method="_on_CheckBox_toggled"]
[connection signal="value_changed" from="Panel/GridContainer/MUSIC/Music" to="Panel/GridContainer/MUSIC/Music" method="_on_Music_value_changed"]
[connection signal="toggled" from="Panel/GridContainer/Borderless" to="Panel/GridContainer/Borderless" method="_on_Borderless_toggled"]
[connection signal="value_changed" from="Panel/GridContainer/GridContainer/Sound" to="Panel/GridContainer/GridContainer/Sound" method="_on_Sounds_value_changed"]

[editable path="BG_Animation/Campfire"]
